{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 8,
  "lineage": "717b4c42-b9f1-1568-5a46-48bbcc41d8e4",
  "resources": [
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_ec2",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-094dc5cf74289dfbc",
            "arn": "arn:aws:ec2:ap-northeast-1:422752180329:instance/i-016ce834b8fc058ae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016ce834b8fc058ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a8cd6ea9563a9b12"
              }
            ],
            "primary_network_interface_id": "eni-0a8cd6ea9563a9b12",
            "private_dns": "ip-10-0-0-10.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "public_ip": "54.64.220.70",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:422752180329:key/562e178b-67bc-4d6f-b7f0-42f85f9956e0",
                "throughput": 125,
                "volume_id": "vol-0000f34c44e22fe30",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-083d703648a3f0629"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb06b2525fd4ce2c",
            "tags": {
              "Name": "prod-web-ec2"
            },
            "tags_all": {
              "Name": "prod-web-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083d703648a3f0629"
            ]
          },
          "dependencies": [
            "module.web.aws_security_group.web_sg",
            "module.web.aws_subnet.web_subnet",
            "module.web.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:422752180329:internet-gateway/igw-09ecec518cda59981",
            "id": "igw-09ecec518cda59981",
            "owner_id": "422752180329",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "prod-web-igw"
            },
            "tags_all": {
              "Name": "prod-web-igw"
            },
            "vpc_id": "vpc-0549811ee26af7a4b"
          },
          "dependencies": [
            "module.web.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_public_rtb",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:422752180329:route-table/rtb-05e5f53fb57b44847",
            "id": "rtb-05e5f53fb57b44847",
            "owner_id": "422752180329",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ecec518cda59981",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-web-public-rtb"
            },
            "tags_all": {
              "Name": "prod-web-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0549811ee26af7a4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web.aws_internet_gateway.web_igw",
            "module.web.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_public_rtb_assoc",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051d83c00033f61cd",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05e5f53fb57b44847",
            "subnet_id": "subnet-0bb06b2525fd4ce2c"
          },
          "dependencies": [
            "module.web.aws_internet_gateway.web_igw",
            "module.web.aws_route_table.web_public_rtb",
            "module.web.aws_subnet.web_subnet",
            "module.web.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:422752180329:security-group/sg-083d703648a3f0629",
            "description": "Allow HTTP access from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083d703648a3f0629",
            "ingress": [
              {
                "cidr_blocks": [
                  "106.72.212.65/32"
                ],
                "description": "Allow HTTP traffic from my IP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-web-sg",
            "name_prefix": "",
            "owner_id": "422752180329",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-web-sg"
            },
            "tags_all": {
              "Name": "prod-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0549811ee26af7a4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:422752180329:subnet/subnet-0bb06b2525fd4ce2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb06b2525fd4ce2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "422752180329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "prod-web-public_subnet"
            },
            "tags_all": {
              "Name": "prod-web-public_subnet"
            },
            "vpc_id": "vpc-0549811ee26af7a4b"
          },
          "dependencies": [
            "module.web.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:422752180329:vpc/vpc-0549811ee26af7a4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5970319875b9d6e",
            "default_route_table_id": "rtb-0e2d504bcb8148120",
            "default_security_group_id": "sg-00f27c7ac22dc9afb",
            "dhcp_options_id": "dopt-0cbade34302b73ce4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0549811ee26af7a4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e2d504bcb8148120",
            "owner_id": "422752180329",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "prod-web-vpc"
            },
            "tags_all": {
              "Name": "prod-web-vpc"
            }
          }
        }
      ]
    }
  ]
}